06/MAYO/2022 FIN DE DIA

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@ EL ; PARA INTALAR LA EXTENSION DEBE QUEDAR ASI ----->  extension=gd
 Errores detectados sin corregir hasta el momento{
     REGISTRAR A UN USUARIO SIN FOTO DE PERFIL GENERA UN ERROR 
     RECARGAR LA PAGINA CON UN USUARIO ANTES REGISTRADO LO REGISTRA N CANTIDAD DE VECES QUE RECARGE LA PANTALLA
+    LA PAGINA NO RESETA EL FORMULARIO DESPUES DE ENVIARLO
 }
+
+
+ERRORES PARA MAÑANA 
+
+NO PERMITE REGISTRAR USUARIOS REVISAR -> NO REPETIR USUARIO
+NO ELIMINA LOS DIRECTORIOS DE LA IMAGEN -> ELIMINAR USUARIO
