--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,5 @@ EL ; PARA INTALAR LA EXTENSION DEBE QUEDAR ASI ----->  extension=gd
 
 Errores detectados sin corregir hasta el momento{
     REGISTRAR A UN USUARIO SIN FOTO DE PERFIL GENERA UN ERROR 
-    RECARGAR LA PAGINA CON UN USUARIO ANTES REGISTRADO LO REGISTRA N CANTIDAD DE VECES QUE RECARGE LA PANTALLA
-    LA PAGINA NO RESETA EL FORMULARIO DESPUES DE ENVIARLO
+    RECARGAR LA PAGINA CON UN USUARIO ANTES REGISTRADO LO REGISTRA N CANTIDAD DE VECES QUE RECARGE LA PANTALLA--> solucionado a medias falta corregir el codigo bien para mostrar totalmente la animacion
 }
-
-
-ERRORES PARA MAÑANA 
-
-NO PERMITE REGISTRAR USUARIOS REVISAR -> NO REPETIR USUARIO
-NO ELIMINA LOS DIRECTORIOS DE LA IMAGEN -> ELIMINAR USUARIO
